ribbon_parser/src/snapshots/ribbon_parser__test__binding_with_type_inference.snap
---
source: ribbon_parser/src/test.rs
description: "bound_variable:=value"
---
body:
  - kind:
      Binding:
        pat:
          kind:
            Pattern:
              kind:
                Identifier: bound_variable
          span:
            low: 0
            hi: 13
        ty: ~
        rhs:
          kind:
            Ident: value
          span:
            low: 16
            hi: 20
    span:
      low: 0
      hi: 20
diagnostics: []
