ribbon_parser/src/snapshots/ribbon_parser__test__fn_decl_start_or_unit_type.snap
---
source: ribbon_parser/src/test.rs
expression: "& program"
---
body:
  - kind:
      TupleOrParameterList: []
    span:
      low: 0
      hi: 1
diagnostics: []
