ribbon_parser/src/snapshots/ribbon_parser__test__function_with_parameters.snap
---
source: ribbon_parser/src/test.rs
description: "(a: i32, b: i32) => a + b"
---
body:
  - kind:
      FunctionDeclaration:
        parameters:
          - kind:
              FunctionParameter:
                pat:
                  kind:
                    Pattern:
                      kind:
                        Identifier: a
                  span:
                    low: 1
                    hi: 1
                ty:
                  kind:
                    Type:
                      path:
                        parts:
                          - kind:
                              Ident: i32
                            span:
                              low: 4
                              hi: 6
                      generic_parameters: []
                  span:
                    low: 4
                    hi: 6
                default_value: ~
            span:
              low: 1
              hi: 6
          - kind:
              FunctionParameter:
                pat:
                  kind:
                    Pattern:
                      kind:
                        Identifier: b
                  span:
                    low: 9
                    hi: 9
                ty:
                  kind:
                    Type:
                      path:
                        parts:
                          - kind:
                              Ident: i32
                            span:
                              low: 12
                              hi: 14
                      generic_parameters: []
                  span:
                    low: 12
                    hi: 14
                default_value: ~
            span:
              low: 9
              hi: 14
        generic_parameters: []
        return_type: ~
        body:
          kind:
            BinOp:
              lhs:
                kind:
                  Ident: a
                span:
                  low: 20
                  hi: 20
              rhs:
                kind:
                  Ident: b
                span:
                  low: 24
                  hi: 24
              kind: Add
              op_span:
                low: 22
                hi: 22
          span:
            low: 20
            hi: 24
    span:
      low: 0
      hi: 24
diagnostics: []
