ribbon_parser/src/snapshots/ribbon_parser__test__function_with_parameters_explicit_ret_type.snap
---
source: ribbon_parser/src/test.rs
description: "(a: i32, b: i32) -> i32 => a + b;"
---
body:
  - kind:
      FunctionDeclaration:
        parameters:
          - kind:
              FunctionParameter:
                pat:
                  kind:
                    Ident: a
                  span:
                    low: 1
                    hi: 1
                ty:
                  kind:
                    Type:
                      path:
                        parts:
                          - kind:
                              Ident: i32
                            span:
                              low: 4
                              hi: 6
                      generic_parameters: []
                  span:
                    low: 4
                    hi: 6
                default_value: ~
            span:
              low: 1
              hi: 6
          - kind:
              FunctionParameter:
                pat:
                  kind:
                    Ident: b
                  span:
                    low: 9
                    hi: 9
                ty:
                  kind:
                    Type:
                      path:
                        parts:
                          - kind:
                              Ident: i32
                            span:
                              low: 12
                              hi: 14
                      generic_parameters: []
                  span:
                    low: 12
                    hi: 14
                default_value: ~
            span:
              low: 9
              hi: 14
        generic_parameters: []
        return_type:
          kind:
            Type:
              path:
                parts:
                  - kind:
                      Ident: i32
                    span:
                      low: 20
                      hi: 22
              generic_parameters: []
          span:
            low: 20
            hi: 22
        body:
          kind:
            BinOp:
              lhs:
                kind:
                  Ident: a
                span:
                  low: 27
                  hi: 27
              rhs:
                kind:
                  Ident: b
                span:
                  low: 31
                  hi: 31
              kind: Add
              op_span:
                low: 29
                hi: 29
          span:
            low: 27
            hi: 31
    span:
      low: 0
      hi: 31
diagnostics: []
